--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.64MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-444.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 26015, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-6.13MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-9.31MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-10.60MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇨🇳 中国-10.89MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30170, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.43MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
-  - {name: 🇺🇸 美国-4.28MB/s(Youtube:不良林), server: 154.17.28.38, port: 49353, type: vmess, uuid: f762694a-948b-4918-a657-6ca9b10f2d32, alterId: 233, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.65MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: 159.223.54.93, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.223.54.93}}
+  - {name: 🇨🇳 中国-544.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 26003, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.38MB/s(Youtube:不良林), server: rn.tianxie.jp.eu.org, port: 443, type: trojan, password: c06bb8e0-7989-4885-9560-df320b7ce1d3, sni: rn.tianxie.jp.eu.org, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-15.86MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-380.3KB/s(Youtube:不良林), server: 36.134.53.194, port: 26015, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-455.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 26012, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-418.1KB/s(Youtube:不良林), server: 36.134.53.194, port: 26014, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-4.50MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-15.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.50MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-15.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.50MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-15.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.50MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-10.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-15.86MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-15.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.50MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-15.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.50MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-15.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.50MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.31MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.60MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-15.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.50MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
