--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.65MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: 159.223.54.93, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.223.54.93}}
+  - {name: 🇨🇳 中国-4.58MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.34MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-5.11MB/s(Youtube:不良林), server: 103.173.255.228, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
   - {name: 🇨🇳 中国-544.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 26003, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.38MB/s(Youtube:不良林), server: rn.tianxie.jp.eu.org, port: 443, type: trojan, password: c06bb8e0-7989-4885-9560-df320b7ce1d3, sni: rn.tianxie.jp.eu.org, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-15.86MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-380.3KB/s(Youtube:不良林), server: 36.134.53.194, port: 26015, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-455.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 26012, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-418.1KB/s(Youtube:不良林), server: 36.134.53.194, port: 26014, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-4.50MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-543.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 26011, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-359.2KB/s(Youtube:不良林), server: 36.134.53.194, port: 26011, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.42MB/s(Youtube:不良林), server: tj-15.t8737.shop, port: 11223, type: trojan, password: afbba9fe-80f3-4fbd-837c-35ede864fea6, sni: tj-15.t8737.shop, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.92MB/s(Youtube:不良林), server: tj-14.t8737.shop, port: 11223, type: trojan, password: dda1173d-7249-4845-a8e9-1578ab750d25, sni: tj-14.t8737.shop, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-318.4KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-15.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-15.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-15.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-15.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-15.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-15.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-15.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-544.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-15.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-418.1KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-318.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
